--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,6 +13,15 @@ nav{
     font-weight: 700;
 }
 
+html{
+    height: 100%;
+}
+body{
+    border-color: red;
+    margin: 0 auto;
+    height: 100%;
+}
+
 .img-card{
     height: 18vw;
     object-fit: cover;
